--- a/style/my.css
+++ b/style/my.css
@@ -1,7 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
 body {
   font-family: 'Open Sans', 'sans-serif';
-  background:#f0f0f0;
+  background:#fff;
 }
 .navbar-nav>li>.dropdown-menu {
     margin-top:20px;
